--- a/config/database.yml
+++ b/config/database.yml
@@ -1,21 +1,10 @@
-# MySQL. Versions 5.1.10 and up are supported.
-#
-# Install the MySQL driver
-#   gem install mysql2
-#
-# Ensure the MySQL gem is defined in your Gemfile
-#   gem 'mysql2'
-#
-# And be sure to use new-style password hashing:
-#   https://dev.mysql.com/doc/refman/5.7/en/password-hashing.html
-#
 default: &default
-  adapter: mysql2
-  encoding: utf8
+  adapter: postgresql
+  encoding: unicode
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  username: root
-  password: root
-  socket: /var/run/mysqld/mysqld.sock
+  username: postgres
+  password: postgres
+  host: 192.168.0.17
 
 development:
   <<: *default
@@ -50,5 +39,5 @@ test:
 production:
   <<: *default
   database: interview_production
-  username: interview
-  password: <%= ENV['INTERVIEW_DATABASE_PASSWORD'] %>
+  username: <%= ENV['INTERVIEW_DATABASE_USERNAME'] || 'postgres' %>
+  password: <%= ENV['INTERVIEW_DATABASE_PASSWORD'] || 'postgres' %>
